--- a/Themes/ThemeIPSN.xaml
+++ b/Themes/ThemeIPSN.xaml
@@ -1,44 +1,54 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    
+
     <!--Dropdown box border, Progress bar fill, Label text-->
-    <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#ff0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#9af5a4</Color>
 
     <!--Basic text-->
-    <Color x:Key="{x:Static adonisUi:Colors.ForegroundColor}">#000000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.ForegroundColor}">#8dff9a</Color>
 
     <!--Button interaction text-->
-    <Color x:Key="{x:Static adonisUi:Colors.AccentForegroundColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.AccentForegroundColor}">#9af5a4</Color>
 
     <!--Minimise button hover colour-->
-    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonHighlightColor}">#ff0000</Color>
-    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonInteractionColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonHighlightColor}">#9af5a4</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonInteractionColor}">#698d6d</Color>
 
     <!--Background-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#ffffff</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#2b2b2b</Color>
 
     <!--Inactive dropdown menu background, Sliders-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#ffefefef</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#1f1f1f</Color>
+
+    <!--Hover gradient-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1HighlightColor}">#1f1f1f</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightColor}">#313131</Color>
+    <!--Dropdown border-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightBorderColor}">#9af5a4</Color>
 
     <!--Enable/disable/edit buttons-->
     <!--Toggle Off-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#ff730000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#2f3d30</Color>
     <!--Toggle On-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#ffBB0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#698d6d</Color>
     <!--Border-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#9af5a4</Color>
     <!--Text-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer2IntenseHighlightColor}">#ffffff</Color>
     <!--Hover-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer2InteractionColor}">#ffffff</Color>
     <!--Click-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer3BackgroundColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer3BackgroundColor}">#76e482</Color>
 
     <!--Dial-->
     <!--Border-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer4BorderColor}">#ababab</Color>
     <!--Marker/Gauge-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer4HighlightColor}">#ff0000</Color>
-    
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4HighlightColor}">#52ff27</Color>
+
+    <!--Dial normal/hover-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4BackgroundColor}">#2b2b2b</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4IntenseHighlightColor}">#5d5d5d</Color>
+
 </ResourceDictionary>
