Add default GMS theme for Visual Studio designer

--- a/Resources.xaml
+++ b/Resources.xaml
@@ -4,6 +4,8 @@
     <ResourceDictionary.MergedDictionaries>
 
         <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Themes/ThemeGMS.xaml"/>
+        
         <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Dimensions.xaml"/>
 
         <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Templates/DatePickerDropDownButton.xaml"/>
