--- a/Themes/ThemeHA.xaml
+++ b/Themes/ThemeHA.xaml
@@ -1,44 +1,56 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    
+
     <!--Dropdown box border, Progress bar fill, Label text-->
-    <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#ff0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#ff3300</Color>
 
     <!--Basic text-->
-    <Color x:Key="{x:Static adonisUi:Colors.ForegroundColor}">#000000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.ForegroundColor}">#ffffff</Color>
 
     <!--Button interaction text-->
-    <Color x:Key="{x:Static adonisUi:Colors.AccentForegroundColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.AccentForegroundColor}">#ff491b</Color>
 
     <!--Minimise button hover colour-->
-    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonHighlightColor}">#ff0000</Color>
-    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonInteractionColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonHighlightColor}">#6e2e56</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.WindowButtonInteractionColor}">#63203f</Color>
 
     <!--Background-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#ffffff</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#1c1a1f</Color>
 
     <!--Inactive dropdown menu background, Sliders-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#ffefefef</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#393144</Color>
+
+    <!--Hover gradient-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1HighlightColor}">#1f1f1f</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightColor}">#313131</Color>
+    <!--Dropdown border-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1BorderColor}">#ff3300</Color>
+    <!--Dropdown border-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer1IntenseHighlightBorderColor}">#ff8717</Color>
 
     <!--Enable/disable/edit buttons-->
     <!--Toggle Off-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#ff730000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#2f233d</Color>
     <!--Toggle On-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#ffBB0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#6e2e56</Color>
     <!--Border-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff0000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff3300</Color>
     <!--Text-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer2IntenseHighlightColor}">#ffffff</Color>
     <!--Hover-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer2InteractionColor}">#ffffff</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer2InteractionColor}">#ff8717</Color>
     <!--Click-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer3BackgroundColor}">#ffa90000</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer3BackgroundColor}">#6e2e56</Color>
 
     <!--Dial-->
     <!--Border-->
     <Color x:Key="{x:Static adonisUi:Colors.Layer4BorderColor}">#ababab</Color>
     <!--Marker/Gauge-->
-    <Color x:Key="{x:Static adonisUi:Colors.Layer4HighlightColor}">#ff0000</Color>
-    
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4HighlightColor}">#ff491b</Color>
+
+    <!--Dial normal/hover-->
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4BackgroundColor}">#1c1a1f</Color>
+    <Color x:Key="{x:Static adonisUi:Colors.Layer4IntenseHighlightColor}">#3d3d3d</Color>
+
 </ResourceDictionary>
