--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -45,7 +45,8 @@
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT INPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
-                          VerticalAlignment="Center" HorizontalAlignment="Center">
+                          VerticalAlignment="Center" HorizontalAlignment="Center"
+                          BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
@@ -75,7 +76,8 @@
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT VIRTUAL OUTPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
-                          VerticalAlignment="Center" HorizontalAlignment="Center">
+                          VerticalAlignment="Center" HorizontalAlignment="Center"
+                          BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
@@ -105,7 +107,8 @@
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT MANUFACTURER" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
-                          VerticalAlignment="Center" HorizontalAlignment="Center">
+                          VerticalAlignment="Center" HorizontalAlignment="Center"
+                          BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
