--- a/App/Views/AudioInterfaceView.xaml
+++ b/App/Views/AudioInterfaceView.xaml
@@ -59,7 +59,7 @@
                              Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
                              Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
                              BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"
-                             Value="{Binding AudioManager.InputPeakMeter}"/>
+                             Value="{Binding AudioManager.InputPeakMeterValue}"/>
             </StackPanel>
 
             <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
@@ -91,7 +91,7 @@
                              Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
                              Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
                              BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"
-                             Value="{Binding AudioManager.OutputPeakMeter}"/>
+                             Value="{Binding AudioManager.OutputPeakMeterValue}"/>
             </StackPanel>
 
             <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
