Adjust namespaces to match folder structure

--- a/App/Views/KeybindWindowView.xaml
+++ b/App/Views/KeybindWindowView.xaml
@@ -2,13 +2,13 @@
              xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI" 
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
              xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-             x:Class="TAC_COM.Views.KeybindWindowView"
+             x:Class="App.Views.KeybindWindowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TAC_COM.Views"
-             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" 
+             xmlns:local="clr-namespace:App.Views"
+             xmlns:viewmodels="clr-namespace:App.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:KeybindWindowViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="185" d:DesignWidth="260"
