--- a/App/Views/MainWindow.xaml
+++ b/App/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<adonisControls:AdonisWindow x:Class="TAC_COM.MainWindow"
+﻿<adonisControls:AdonisWindow x:Class="App.MainWindow"
                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,9 @@
                              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
                              xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
                              xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-                             xmlns:local="clr-namespace:TAC_COM"
-                             xmlns:views="clr-namespace:TAC_COM.Views" 
-                             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
+                             xmlns:local="clr-namespace:App"
+                             xmlns:views="clr-namespace:App.Views" 
+                             xmlns:viewmodels="clr-namespace:App.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
                              mc:Ignorable="d"
                              Title="TAC/COM"
                              Height="350" Width="600" MinHeight="350" MinWidth="600"
