--- a/App/Controls/Dial.xaml
+++ b/App/Controls/Dial.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TAC_COM.Controls.Dial"
+﻿<UserControl x:Class="App.Controls.Dial"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
