--- a/App/Views/AudioInterfaceView.xaml
+++ b/App/Views/AudioInterfaceView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="TAC_COM.Views.AudioInterfaceView"
+﻿<UserControl x:Class="App.Views.AudioInterfaceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TAC_COM.Views" 
+             xmlns:local="clr-namespace:App.Views" 
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
              xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" xmlns:controls="clr-namespace:TAC_COM.Controls"
+             xmlns:viewmodels="clr-namespace:App.ViewModels" xmlns:controls="clr-namespace:App.Controls"
              d:DataContext="{d:DesignInstance Type=viewmodels:AudioInterfaceViewModel}"
              mc:Ignorable="d" 
              FontSize="12">
