--- a/TAC_COM/Views/AudioInterfaceView.xaml
+++ b/TAC_COM/Views/AudioInterfaceView.xaml
@@ -44,12 +44,13 @@
                           SelectedItem="{Binding InputDevice}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT INPUT DEVICE" FontFamily="Calibri" FontSize="14"
-                          IsReadOnly="True" IsEditable="True" 
+                          IsReadOnly="True" Cursor="Hand"
                           VerticalAlignment="Center" HorizontalAlignment="Center"
                           BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
+                            <Setter Property="Cursor" Value="Hand"/>
                         </Style>
                     </ComboBox.ItemContainerStyle>
                 </ComboBox>
@@ -76,12 +77,13 @@
                           SelectedItem="{Binding OutputDevice}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT VIRTUAL OUTPUT DEVICE" FontFamily="Calibri" FontSize="14"
-                          IsReadOnly="True" IsEditable="True" 
+                          IsReadOnly="True" Cursor="Hand"
                           VerticalAlignment="Center" HorizontalAlignment="Center"
                           BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
+                            <Setter Property="Cursor" Value="Hand"/>
                         </Style>
                     </ComboBox.ItemContainerStyle>
                 </ComboBox>
@@ -108,12 +110,13 @@
                           SelectedItem="{Binding ActiveProfile}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT MANUFACTURER" FontFamily="Calibri" FontSize="14"
-                          IsReadOnly="True" IsEditable="True" 
+                          IsReadOnly="True" Cursor="Hand"
                           VerticalAlignment="Center" HorizontalAlignment="Center"
                           BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
                     <ComboBox.ItemContainerStyle>
                         <Style TargetType="ComboBoxItem">
                             <Setter Property="MaxWidth" Value="280"/>
+                            <Setter Property="Cursor" Value="Hand"/>
                         </Style>
                     </ComboBox.ItemContainerStyle>
                 </ComboBox>
